kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: geneweb
  name: geneweb
  namespace: geneweb
spec:
  selector:
    matchLabels:
      app: geneweb
  template:
    metadata:
      labels:
        app: geneweb
    spec:
      containers:
      - name: geneweb
        image: thdcpharbor01.int.thdc.tech/thdc/jeffernz/geneweb
        imagePullPolicy: Always
        ports:
        - containerPort: 2317
          protocol: TCP
        volumeMounts:
        - mountPath: "/geneweb/bases"
          subPath: bases
          name: geneweb
        - mountPath: "/geneweb/geds"
          subPath: geds
          name: geneweb
      volumes:
      - name: geneweb
        persistentVolumeClaim:
          claimName: geneweb-pvc
