kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: geneweb
  namespace: geneweb
  annotations:
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/limit-connections: '16'
    nginx.ingress.kubernetes.io/limit-rpm: '512'
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enamble-owasp-core-rules: "true"
spec:
  tls:
  - hosts:
    - 10.30.0.30.nip.io # Sample value: geneweb.mydomain.org
    secretName: geneweb-tls
  rules:
  - host: 10.30.0.30.nip.io # Sample value: geneweb.mydomain.org
    http:
      paths:
      - path: /
        backend:
          serviceName: geneweb
          servicePort: 2317
